--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+file.upload-dir=src/main/resources/static/images
