--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -77,8 +77,14 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			<version>2.3.1</version>
+			
 		</dependency>
+		    <!-- Spring WebSocket -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+
 
 
 	</dependencies>
