--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -77,16 +77,14 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			
 		</dependency>
-		    <!-- Spring WebSocket -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-websocket</artifactId>
-    </dependency>
-
-
-
+		
+		<!-- Socket.IO 서버 라이브러리 -->
+		<dependency>
+			<groupId>com.corundumstudio.socketio</groupId>
+			<artifactId>netty-socketio</artifactId>
+			<version>1.7.18</version> <!-- 최신 버전 확인 가능 -->
+		</dependency>
 	</dependencies>
 
 	<build>
