--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,19 @@ services:
       - app-network
     container_name: socket-server
 
+  nginx:
+    image: nginx:alpine  # Nginx 알파인 이미지 사용
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Nginx 설정 파일을 컨테이너에 복사
+    ports:
+      - "81:81"  # 호스트의 80 포트를 컨테이너의 80 포트에 매핑
+    depends_on:
+      - react-app
+      - backend
+    networks:
+      - app-network
+    container_name: nginx
+
 networks:
   app-network:  # 앱 네트워크 정의
 
