--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,10 +57,11 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Nginx 설정 파일을 컨테이너에 복사
     ports:
-      - "81:81"  # 호스트의 80 포트를 컨테이너의 80 포트에 매핑
+      - "81:3000"  # 호스트의 80 포트를 컨테이너의 80 포트에 매핑
     depends_on:
       - react-app
       - backend
+      - socket-server
     networks:
       - app-network
     container_name: nginx
