이미지 업로드 실시간으로 되도록 의존성 추가

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -77,20 +77,25 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			
+
 		</dependency>
-		    <!-- Spring WebSocket -->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-websocket</artifactId>
-    </dependency>
-        <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-all</artifactId>
-        <version>4.1.77.Final</version> <!-- 최신 버전을 확인하여 적절히 변경하세요. -->
-    </dependency>
-
-
+		<!-- Spring WebSocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.77.Final</version> <!-- 최신 버전을 확인하여 적절히 변경하세요. -->
+		</dependency>
+		<!-- Spring Boot DevTools 추가 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 
 
 	</dependencies>
