--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/teammanding  # MySQL 데이터베이스 URL
       SPRING_DATASOURCE_USERNAME: root  # MySQL 사용자 이름
       SPRING_DATASOURCE_PASSWORD: 1234  # MySQL 비밀번호
+    #volumes:
+    #  - ./images:/app/images
     networks:
       - app-network
     container_name: backend
