--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/teammanding  # MySQL 데이터베이스 URL
       SPRING_DATASOURCE_USERNAME: root  # MySQL 사용자 이름
       SPRING_DATASOURCE_PASSWORD: 1234  # MySQL 비밀번호
-    #volumes:
-    #  - ./images:/app/images
+    volumes:
+      - ./images:/app/images
+    command: bash -c "chmod 777 /app/images && java -jar /app/app.jar"  # 컨테이너 시작 시 권한 설정
+
     networks:
       - app-network
     container_name: backend
